<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="thiagocury.eti.br.exbancosqliteprodutoapi19.TelaCadastro">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:context="thiagocury.eti.br.exemplobancosqliteproduto.TelaCadastro"
        android:background="#EEEEEE"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/rl">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_codigo"
                android:layout_gravity="center_horizontal"
                android:hint="@string/et_codigo" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/et_nome"
                android:ems="10"
                android:id="@+id/et_nome"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/et_valor_custo"
                android:layout_gravity="center_horizontal"
                android:hint="@string/et_valor_custo" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/et_quantidade"
                android:layout_gravity="center_horizontal"
                android:hint="@string/et_quantidade" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_adicionar"
                android:id="@+id/btn_adicionar"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>